--- a/src/containers/Chat/components/NavBar/ChatsDisplayers/components/ContactDisplayer/ContactDisplayer.module.scss
+++ b/src/containers/Chat/components/NavBar/ChatsDisplayers/components/ContactDisplayer/ContactDisplayer.module.scss
@@ -1,40 +1,116 @@
 .ContactDisplayer {
-  padding-left: var(--nav-chat-left-pad);
-  .SearchBarHolder {
-    background-color: red;
-    display: flex;
-    width: 95%;
-    color: var(--main-blank);
-    border-radius: 2rem;
-    height: 2rem;
-    background-color: #ffff;
-    box-shadow: 0 0.2rem 1rem #cccc;
-    padding: 0 0.5rem;
-    gap: 0.2rem;
-
-    transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    svg {
-      width: 1.4rem;
-    }
-    .SearchBar {
-      display: block;
-      font-weight: 500;
-      border: none;
-      background-color: transparent;
-      height: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  .SearchBarContainer {
+    padding: 0.8rem var(--nav-chat-side-pad);
+    .SearchBarHolder {
+      display: flex;
+      align-items: center;
       width: 100%;
-      color: inherit;
+      color: var(--main-blank);
+      border-radius: 2rem;
+      height: 2rem;
+      background-color: var(--primary-light);
+      box-shadow: 0 0.2rem 1rem #cccc;
+      padding: 0 0.5rem;
+      gap: 0.2rem;
 
-      &:focus-visible,
+      transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      svg {
+        width: 1.4rem;
+      }
+      .SearchBar {
+        display: block;
+        font-weight: 500;
+        border: none;
+        background-color: transparent;
+        height: 100%;
+        width: 100%;
+        color: inherit;
+
+        &:focus-visible,
+        &:hover {
+          outline: none;
+        }
+      }
+
+      &:focus-within,
       &:hover {
-        outline: none;
+        color: inherit;
+        box-shadow: 0 0.2rem 1rem rgb(155, 149, 149);
+      }
+    }
+  }
+
+  .ContactList {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem var(--nav-chat-side-pad);
+    gap: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: overlay;
+
+    .ContactLink {
+      display: block;
+      text-decoration: none;
+
+      .Contact {
+        background-color: var(--primary-light);
+        border-radius: 0.5rem;
+        box-shadow: 0 0 0.8rem #cccc;
+        cursor: pointer;
+        padding: 0.7rem;
+        transition: transform 0.2s ease;
+        display: flex;
+        gap: 1rem;
+
+        .UsernameHolder {
+          font-size: 1.1rem;
+          font-weight: bold;
+        }
+
+        .PersonalnameHolder {
+          font-size: 0.8rem;
+          color: var(--main-blank);
+        }
+
+        &:hover {
+          transform: translate(0.1rem, -0.1rem);
+        }
+      }
+
+      &.active {
+        .Contact {
+          background-color: var(--primary-dark);
+          color: var(--primary-light);
+        }
       }
     }
 
-    &:focus-within,
-    &:hover {
-      color: inherit;
-      box-shadow: 0 0.2rem 1rem rgb(155, 149, 149);
+    /* width */
+    &::-webkit-scrollbar {
+      width: 0.3rem;
+      height: 0rem;
     }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: #888;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+    /* Handle */
   }
 }
