--- a/src/containers/Chat/Chat.module.scss
+++ b/src/containers/Chat/Chat.module.scss
@@ -10,11 +10,17 @@
     .MainContent {
       height: 100%;
       width: 100%;
+      max-width: 100%;
       background-color: blueviolet;
     }
     .SideContent {
       height: 100%;
-      width: 25rem;
+      min-width: 20rem;
+      width: 20rem;
+
+      @media screen and (max-width: 1000px) {
+        display: none;
+      }
     }
   }
 }
