--- a/src/containers/Chat/components/NavBar/NavBar.module.scss
+++ b/src/containers/Chat/components/NavBar/NavBar.module.scss
@@ -10,7 +10,7 @@
   padding: 0;
 
   .TopNavigation {
-    height: 4rem;
+    min-height: 4rem;
     width: 100%;
     padding: 0.5rem 0;
     display: flex;
@@ -21,6 +21,7 @@
 
     .TopNavigationItem {
       color: var(--primary-grey);
+
       padding: 0.5rem;
       cursor: pointer;
       transition: transform 0.3s ease;
@@ -68,5 +69,9 @@
     flex-direction: column;
     overflow: hidden;
     height: 100%;
+  }
+
+  @media screen and (max-width: 1000px) {
+    display: none;
   }
 }
