--- a/src/containers/Home/pages/Signin/Signin.module.scss
+++ b/src/containers/Home/pages/Signin/Signin.module.scss
@@ -1,21 +1,24 @@
 .Signin {
   height: 100vh;
   max-height: 100vh;
+
   display: grid;
   place-items: center;
   background-color: hsl(200deg 33% 98%);
 
   .SigninBox {
     width: 40rem;
-    max-width: 100vw;
-    height: 20rem;
-    max-height: 80vh;
+    max-width: 95vw;
+    min-height: fit-content;
+    height: 80vh;
+    max-height: 20rem;
+
     background-color: var(--primary-light);
     border-radius: 0.5rem;
     box-shadow: 0 0 1rem rgb(215, 215, 216);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     gap: 1rem;
     padding: 1rem;
     .InputHolder {
@@ -43,8 +46,10 @@
       }
     }
   }
-  .Button:hover {
-    border-color: var(--primary-soft);
-    color: var(--primary-soft);
+  .Button {
+    &:hover {
+      border-color: var(--primary-soft);
+      color: var(--primary-soft);
+    }
   }
 }
