--- a/src/containers/Chat/components/NavBar/NavBar.module.scss
+++ b/src/containers/Chat/components/NavBar/NavBar.module.scss
@@ -4,10 +4,24 @@
   height: 100%;
   max-height: 100vh;
   display: flex;
+  z-index: 10;
   flex-direction: column;
   overflow: hidden;
   background-color: hsl(200deg 33% 98%);
   padding: 0;
+  transition: margin-left 0.4s ease-in-out, opacity 0.2s ease;
+
+  @media screen and (max-width: 700px) {
+    margin-left: -100%;
+    opacity: 0;
+    position: fixed;
+
+    &:is([isopen="true"]) {
+      margin-left: 0;
+      opacity: 1;
+      width: 100%;
+    }
+  }
 
   .TopNavigation {
     min-height: 4rem;
@@ -83,9 +97,5 @@
     &:hover {
       font-weight: bolder;
     }
-  }
-
-  @media screen and (max-width: 700px) {
-    display: none;
   }
 }
