-added signup and signup validation

--- a/src/containers/Chat/components/NavBar/components/ChatsDisplayers/components/ContactDisplayer/ContactDisplayer.module.scss
+++ b/src/containers/Chat/components/NavBar/components/ChatsDisplayers/components/ContactDisplayer/ContactDisplayer.module.scss
@@ -113,4 +113,11 @@
     }
     /* Handle */
   }
+
+  .Button {
+    &:hover {
+      color: var(--primary-soft);
+      border-color: var(--primary-soft);
+    }
+  }
 }
