--- a/src/containers/Home/pages/Signup/Signup.module.scss
+++ b/src/containers/Home/pages/Signup/Signup.module.scss
@@ -12,7 +12,7 @@
 
   .SigninBox {
     width: min(30rem, 95vw);
-    min-width: fit-content;
+    // max-width: min(30rem, 95vw);
 
     min-height: fit-content;
     height: fit-content;
@@ -36,15 +36,20 @@
       margin-bottom: 1rem;
 
       .InputHolder {
-        border-radius: 2rem;
-
-        height: 2.5rem;
-
-        .Input,
-        .Input input {
-          font-size: 1rem;
-          font-weight: 500;
-          height: 100%;
+        .InputError {
+          color: red;
+          font-size: 0.8rem;
+          padding: 0.2rem;
+          overflow: hidden;
+        }
+        .Input {
+          height: 2.5rem;
+          border-radius: 0.5rem;
+          input {
+            font-size: 1rem;
+            font-weight: 500;
+            height: 100%;
+          }
         }
 
         .Input:hover,
@@ -83,7 +88,7 @@
   }
 
   .Suggestion {
-    margin-top: auto;
+    margin-top: 1rem;
     .SuggestionText {
     }
     .SuggestionLink {
