--- a/src/containers/Chat/pages/Profile/Profile.module.scss
+++ b/src/containers/Chat/pages/Profile/Profile.module.scss
@@ -25,6 +25,11 @@
     padding-bottom: 2rem;
     border-bottom: 0.1rem solid #e6e8e9;
 
+    @media (max-width: 700px) {
+      display: flex;
+      justify-content: center;
+    }
+
     .ProfilPic {
       display: block;
     }
@@ -45,7 +50,7 @@
   .ProfilInfoHolder {
     padding: 2rem 0;
 
-    @media (min-width: 1600px) {
+    @media (min-width: 1400px) {
       width: 60%;
     }
     .DataChanger {
@@ -63,16 +68,35 @@
       }
 
       .InputHolder {
-        height: 2.5rem;
-
-        input {
-          height: 100%;
-          font-size: 1rem;
-
-          &:is([meta-status="normal"]):hover,
-          &:is([meta-status="normal"]):focus {
+        .InputError {
+          color: red;
+          font-size: 0.8rem;
+          padding: 0.2rem;
+          overflow: hidden;
+        }
+        .Input {
+          height: 2.5rem;
+          border-radius: 0.5rem;
+          .PrefixIcon {
+            font-size: 1.1rem !important;
+          }
+          input {
+            font-size: 1rem;
+            font-weight: 500;
+            height: 100%;
+          }
+          &:hover,
+          &:focus,
+          &:focus-visible,
+          &:focus-within {
             border-color: var(--primary-soft);
-            box-shadow: none;
+            //box-shadow: none;
+            .PrefixIcon {
+              color: var(--primary-hard);
+            }
+          }
+          svg:hover {
+            color: var(--primary-hard);
           }
         }
       }
