--- a/src/containers/Chat/components/NavBar/NavBar.module.scss
+++ b/src/containers/Chat/components/NavBar/NavBar.module.scss
@@ -1,6 +1,4 @@
 .NavBar {
-  min-width: 20rem;
-  width: 20rem;
   height: 100%;
   max-height: 100vh;
   display: flex;
@@ -9,17 +7,33 @@
   overflow: hidden;
   background-color: hsl(200deg 33% 98%);
   padding: 0;
-  transition: margin-left 0.4s ease-in-out, opacity 0.2s ease;
-
+  transition: width 0.4s ease-in-out, opacity 0.2s ease;
+  & > * {
+    transition: width 0.4s ease-in-out, opacity 0.2s ease;
+  }
+  //margin-left: -100%;
+  //position: fixed;
+  min-width: 20rem;
+  width: 20rem;
+  //  opacity: 0;
   @media screen and (max-width: 700px) {
-    margin-left: -100%;
-    opacity: 0;
     position: fixed;
+    width: 100%;
+    min-width: 0;
 
-    &:is([isopen="true"]) {
-      margin-left: 0;
-      opacity: 1;
-      width: 100%;
+    &:is([isopen="false"]) {
+      width: 0;
+
+      & > * {
+        width: 0;
+      }
+    }
+  }
+
+  .CloseArrow {
+    display: none;
+    @media screen and (max-width: 700px) {
+      display: block;
     }
   }
 
