--- a/src/containers/Chat/pages/PublicConversation/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
+++ b/src/containers/Chat/pages/PublicConversation/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
@@ -1,4 +1,11 @@
 .VoiceRecorder {
   display: grid;
   place-items: center;
+  background: transparent;
+
+  &:is([isrecording="true"]) {
+    svg {
+      color: red;
+    }
+  }
 }
