added mic wavelength indicator

--- a/src/containers/Chat/pages/PublicConversation/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
+++ b/src/containers/Chat/pages/PublicConversation/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
@@ -1,8 +1,20 @@
 .VoiceRecorder {
+  background: transparent;
   display: grid;
   place-items: center;
-  background: transparent;
+  overflow: visible;
 
+  span {
+    border-radius: 100%;
+
+    transform: scale(1.05);
+    display: grid;
+    place-items: center;
+
+    svg {
+      position: relative;
+    }
+  }
   &:is([isrecording="true"]) {
     svg {
       color: red;
