--- a/src/containers/Chat/pages/PublicConversation/components/ChatHandler/components/VoiceTextMessage/VoiceTextMessage.module.scss
+++ b/src/containers/Chat/pages/PublicConversation/components/ChatHandler/components/VoiceTextMessage/VoiceTextMessage.module.scss
@@ -1,7 +1,7 @@
 .VoiceTextMessage {
   overflow-wrap: break-word;
-  max-width: min(16rem, 60%);
-  min-width: min(15rem, 60%);
+  max-width: min(18rem, 70%);
+  min-width: min(18rem, 70%);
   min-height: 2.5rem;
   display: flex;
   align-items: center;
@@ -18,6 +18,12 @@
     cursor: pointer;
   }
 
+  .Footer {
+    margin: 0 0.5rem;
+    display: grid;
+    place-items: center;
+  }
+
   &.SelfSent {
     margin-left: auto;
     border-top-left-radius: 2rem;
@@ -28,6 +34,11 @@
       var(--primary-hard),
       var(--primary-soft)
     );
+  }
+  .Spinner {
+    i {
+      background-color: var(--primary-hard);
+    }
   }
 
   &.Temporary {
