- added 'Contact' component - added 'ContactRequest' component -added 'Candidate' component

--- a/src/containers/Chat/pages/PublicConversation/components/ContactHeader/ContactHeader.module.scss
+++ b/src/containers/Chat/pages/PublicConversation/components/ContactHeader/ContactHeader.module.scss
@@ -15,4 +15,14 @@
       display: none;
     }
   }
+
+  .InfoHolder {
+    .UsernameHolder {
+      font-weight: bold;
+    }
+    .PersonalnameHolder {
+      font-size: 0.8rem;
+      font-weight: 500;
+    }
+  }
 }
