-corrected previous error in directory names -corrected animation problems

--- a/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -4,15 +4,14 @@
   .MessageHolder {
     padding: 1rem;
     background-color: #e7eff7;
-
     width: fit-content;
-
     min-height: fit-content;
     word-break: break-word;
     word-wrap: break-word;
     white-space: break-spaces;
     max-width: 80%;
     /* width: fit-content; */
+    position: relative;
   }
 
   &:not(.SelfSent):not(:last-child) {
