-added sentDateHolder to textMessage

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -33,6 +33,7 @@
 :root {
   --primary-hard: #6d54e5;
   --primary-soft: #b750fd;
+  --main-blank-lighter: #d8dee0;
   --main-blank: #bcc6cb;
   --main-blank-deeper: #a7aaac;
   --primary-grey: hsl(203deg 12% 65%);
