--- a/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -2,16 +2,28 @@
   transition: border-radius 0.05s ease-in-out;
   display: flex;
   .MessageHolder {
-    padding: 1rem;
+    /*   display: flex;
+    justify-content: space-between; */
+    padding: 1rem 1rem 0.5rem 1rem;
     background-color: #e7eff7;
     width: fit-content;
     min-height: fit-content;
-    word-break: break-word;
-    word-wrap: break-word;
-    white-space: break-spaces;
+
     max-width: 80%;
     /* width: fit-content; */
     position: relative;
+    word-break: break-word;
+    word-wrap: break-word;
+    white-space: break-spaces;
+
+    .SentDateHolder {
+      float: right;
+      color: var(--main-blank-deeper);
+
+      font-size: 0.8rem;
+      margin-left: 0.5rem;
+      margin-top: 0.5rem;
+    }
   }
 
   &:not(.SelfSent):not(:last-child) {
@@ -34,6 +46,7 @@
   &.SelfSent {
     justify-content: end;
     .MessageHolder {
+      padding: 1rem 0.5rem 0.5rem 1rem;
       color: #ffff;
       background: linear-gradient(
         to right,
@@ -42,6 +55,10 @@
       );
       border-top-left-radius: 2rem;
       border-bottom-left-radius: 2rem;
+
+      .SentDateHolder {
+        color: var(--main-blank-lighter);
+      }
     }
     &:not(:last-child) {
       .MessageHolder {
