--- a/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -55,9 +55,51 @@
       );
       border-top-left-radius: 2rem;
       border-bottom-left-radius: 2rem;
+      position: relative;
 
       .SentDateHolder {
         color: var(--main-blank-lighter);
+      }
+
+      .Options {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        height: 80%;
+        width: 2rem;
+
+        position: absolute;
+        left: -2rem;
+        bottom: 50%;
+        transform: translateY(50%);
+        cursor: pointer;
+
+        svg {
+          color: var(--main-blank-deeper);
+        }
+
+        .ActionsHolder {
+          .DeleteButton {
+            cursor: pointer;
+            color: red;
+            &:hover {
+              color: white;
+              background-color: red;
+            }
+          }
+        }
+
+        &:hover {
+          svg {
+            color: gray;
+          }
+        }
+      }
+
+      &:hover {
+        .Options {
+          display: flex;
+        }
       }
     }
     &:not(:last-child) {
