--- a/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
@@ -7,6 +7,9 @@
     max-width: min(15rem, 60%);
 
     transition: border-radius 0.05s ease-in-out;
+    .Options {
+      display: none;
+    }
   }
 
   &:not(.SelfSent):not(:last-child) {
@@ -31,6 +34,49 @@
     .MessageHolder {
       border-top-left-radius: 2rem;
       border-bottom-left-radius: 2rem;
+      position: relative;
+
+      .Options {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        height: 80%;
+        width: 2rem;
+
+        position: absolute;
+        left: -2rem;
+        bottom: 50%;
+        transform: translateY(50%);
+
+        cursor: pointer;
+
+        svg {
+          color: var(--main-blank-deeper);
+        }
+
+        .ActionsHolder {
+          .DeleteButton {
+            cursor: pointer;
+            color: red;
+            &:hover {
+              color: white;
+              background-color: red;
+            }
+          }
+        }
+
+        &:hover {
+          svg {
+            color: gray;
+          }
+        }
+      }
+
+      &:hover {
+        .Options {
+          display: flex;
+        }
+      }
     }
 
     &:not(:last-child) {
