--- a/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -1,6 +1,8 @@
 .TextMessage {
   transition: border-radius 0.05s ease-in-out;
   display: flex;
+  align-items: end;
+  gap: 0.2rem;
   .MessageHolder {
     /*   display: flex;
     justify-content: space-between; */
