--- a/src/containers/Chat/pages/shared/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
@@ -1,42 +1,32 @@
-.VoiceTextMessage {
+.ImageMessage {
   display: flex;
   justify-content: flex-start;
-
+  align-items: end;
+  gap: 0.2rem;
   .MessageHolder {
     overflow-wrap: break-word;
-    max-width: min(18rem, 70%);
-    min-width: min(18rem, 70%);
-    min-height: 2.5rem;
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-    background-color: #e7eff7;
-    border-radius: 1rem;
-    padding: 0 0.5rem;
+    max-width: min(15rem, 60%);
 
     transition: border-radius 0.05s ease-in-out;
-    svg {
-      width: 2rem;
-      margin: auto;
-      cursor: pointer;
-    }
-
-    .Footer {
-      margin: 0 0.5rem;
-      display: grid;
-      place-items: center;
-    }
-
-    .SentDateHolder {
-      float: right;
-      color: var(--main-blank-deeper);
-
-      font-size: 0.7rem;
-      margin-left: -0.2rem;
-      margin-top: 0.5rem;
-    }
     .Options {
       display: none;
+    }
+  }
+
+  &:not(.SelfSent):not(:last-child) {
+    .MessageHolder {
+      border-top-left-radius: 2rem;
+    }
+  }
+  &:is(:last-child):not(.SelfSent) {
+    .MessageHolder {
+      border-bottom-left-radius: 2rem;
+    }
+  }
+  &:not(.SelfSent) {
+    .MessageHolder {
+      border-top-right-radius: 2rem;
+      border-bottom-right-radius: 2rem;
     }
   }
 
@@ -45,18 +35,7 @@
     .MessageHolder {
       border-top-left-radius: 2rem;
       border-bottom-left-radius: 2rem;
-      color: #ffff;
-      background: linear-gradient(
-        to right,
-        var(--primary-hard),
-        var(--primary-soft)
-      );
-
       position: relative;
-
-      .SentDateHolder {
-        color: var(--main-blank-lighter);
-      }
 
       .Options {
         display: none;
@@ -100,10 +79,16 @@
         }
       }
     }
-  }
-  .Spinner {
-    i {
-      background-color: var(--primary-hard);
+
+    &:not(:last-child) {
+      .MessageHolder {
+        border-top-right-radius: 2rem;
+      }
+    }
+    &:is(:last-child) {
+      .MessageHolder {
+        border-bottom-right-radius: 2rem;
+      }
     }
   }
 
