added public conversation interfaces

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -33,9 +33,9 @@
 :root {
   --primary-hard: #6d54e5;
   --primary-soft: #b750fd;
-  --main-blank-lighter: #d8dee0;
-  --main-blank: #bcc6cb;
-  --main-blank-deeper: #a7aaac;
+  --primary-blank-lighter: #d8dee0;
+  --primary-blank: #bcc6cb;
+  --primary-blank-deeper: #a7aaac;
   --primary-grey: hsl(203deg 12% 65%);
   --primary-grey-deeper: #8e8e8f;
   --primary-dark: #303341;
