--- a/src/containers/Chat/components/NavBar/components/ChatsDisplayers/ChatDisplayer.module.scss
+++ b/src/containers/Chat/components/NavBar/components/ChatsDisplayers/ChatDisplayer.module.scss
@@ -34,7 +34,7 @@
     padding: 0.2rem var(--nav-chat-side-pad) 1rem var(--nav-chat-side-pad);
     .ChatType {
       font-weight: 500;
-      color: var(--main-blank);
+      color: var(--primary-blank);
       cursor: pointer;
       transition: transform 0.1s ease;
 
