--- a/src/containers/Chat/components/NavBar/components/ChatsDisplayers/components/ContactAdder/components/Candidate/Candidate.module.scss
+++ b/src/containers/Chat/components/NavBar/components/ChatsDisplayers/components/ContactAdder/components/Candidate/Candidate.module.scss
@@ -17,13 +17,13 @@
 
   .NameHolder {
     .UserName {
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: 500;
       line-height: normal;
     }
     .PersonalName {
       font-size: 0.8rem;
-      color: var(--main-blank);
+      color: var(--primary-blank);
       line-height: normal;
     }
   }
