--- a/src/containers/Chat/pages/shared/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/components/ImageMessage/ImageMessage.module.scss
@@ -52,7 +52,7 @@
         cursor: pointer;
 
         svg {
-          color: var(--main-blank-deeper);
+          color: var(--primary-blank-deeper);
         }
 
         .ActionsHolder {
