--- a/src/containers/Chat/pages/PublicConversation/PublicConversation.module.scss
+++ b/src/containers/Chat/pages/PublicConversation/PublicConversation.module.scss
@@ -1,4 +1,7 @@
 .PublicConversation {
   height: 100%;
-  background: linear-gradient(to right, red, blue);
+
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-light);
 }
