--- a/src/containers/Chat/pages/shared/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -20,7 +20,7 @@
 
     .SentDateHolder {
       float: right;
-      color: var(--main-blank-deeper);
+      color: var(--primary-blank-deeper);
 
       font-size: 0.8rem;
       margin-left: 0.5rem;
@@ -60,7 +60,7 @@
       position: relative;
 
       .SentDateHolder {
-        color: var(--main-blank-lighter);
+        color: var(--primary-blank-lighter);
       }
 
       .Options {
@@ -77,7 +77,7 @@
         cursor: pointer;
 
         svg {
-          color: var(--main-blank-deeper);
+          color: var(--primary-blank-deeper);
         }
 
         .ActionsHolder {
