-changed icon -added default chat page -changed notification into collapsable types

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -33,6 +33,7 @@
 :root {
   --primary-hard: #6d54e5;
   --primary-soft: #b750fd;
+  --primary-soft-shadow: #9f46db;
   --primary-blank-lighter: #d8dee0;
   --primary-blank: #bcc6cb;
   --primary-blank-deeper: #a7aaac;
