--- a/src/containers/Chat/components/NavBar/components/NotificationDisplayer/NotificationDisplayer.module.scss
+++ b/src/containers/Chat/components/NavBar/components/NotificationDisplayer/NotificationDisplayer.module.scss
@@ -1,5 +1,6 @@
 .NotificationDisplayer {
   height: 100%;
+  // padding: 0.5rem 0;
 
   display: flex;
   flex-direction: column;
@@ -10,8 +11,14 @@
     }
   }
 
+  .Collapse {
+    border-radius: 0;
+
+    div {
+      border-radius: 0 !important;
+    }
+  }
   .RequestList {
-    padding: 1rem;
     height: 100%;
 
     overflow-y: auto;
