--- a/src/containers/Chat/pages/Default/Default.module.scss
+++ b/src/containers/Chat/pages/Default/Default.module.scss
@@ -2,6 +2,21 @@
   height: 100%;
   display: grid;
   place-items: center;
+  position: relative;
+
+  .Menu {
+    position: absolute;
+    color: var(--primary-soft);
+    width: 2rem;
+    left: 1rem;
+    top: 1rem;
+    cursor: pointer;
+
+    @media screen and (min-width: 701px) {
+      display: none;
+    }
+  }
+
   svg {
     width: 60vw;
     max-width: 20rem;
