--- a/src/containers/Chat/components/NavBar/components/NotificationDisplayer/NotificationDisplayer.module.scss
+++ b/src/containers/Chat/components/NavBar/components/NotificationDisplayer/NotificationDisplayer.module.scss
@@ -1,9 +1,19 @@
 .NotificationDisplayer {
   height: 100%;
   // padding: 0.5rem 0;
-
+  overflow-x: auto;
   display: flex;
   flex-direction: column;
+
+  //scroll bar style
+  scrollbar-width: none;
+  scrollbar-color: #888 #f1f1f1;
+  -webkit-tap-highlight-color: transparent;
+  /* width */
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
 
   .Spinner {
     i {
