--- a/src/containers/Chat/pages/PrivateConversation/components/ContactHeader/ContactHeader.module.scss
+++ b/src/containers/Chat/pages/PrivateConversation/components/ContactHeader/ContactHeader.module.scss
@@ -7,6 +7,13 @@
   align-items: center;
   padding: 0 1rem;
 
+  .Options {
+    width: 2.2rem;
+    color: var(--primary-soft);
+    margin-left: auto;
+    cursor: pointer;
+  }
+
   .Menu {
     width: 2rem;
     color: var(--primary-soft);
