--- a/src/containers/Chat/pages/shared/components/ChatHandler/components/TextMessage/TextMessage.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/components/TextMessage/TextMessage.module.scss
@@ -1,5 +1,5 @@
 .TextMessage {
-  transition: border-radius 0.05s ease-in-out;
+  // transition: border-radius 0.05s ease-in-out;
   display: flex;
   align-items: end;
   gap: 0.2rem;
@@ -116,7 +116,7 @@
     }
   }
 
-  &.Temporary {
+  /* &.Temporary {
     opacity: 0.5;
-  }
+  } */
 }
