--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -1,2 +1,59 @@
 .Home {
+  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
+  background: linear-gradient(
+    to top right,
+    rgb(100 219 222),
+    var(--primary-soft)
+  );
+  display: flex;
+  flex-direction: column;
+
+  .Header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    @media (max-width: 700px) {
+      flex-direction: column;
+      padding: 1rem;
+    }
+
+    .LogoHolder {
+      display: flex;
+      align-items: center;
+
+      gap: 1rem;
+      .Logo {
+        width: 4rem;
+        cursor: pointer;
+      }
+
+      .LogoText {
+        color: #ffff;
+        font-weight: 500;
+        font-size: 2rem;
+        cursor: pointer;
+      }
+    }
+
+    .NavigationHolder {
+      height: 4rem;
+      width: 25rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      .NavigationItem {
+        color: var(--primary-blank);
+        font-weight: 500;
+        text-transform: capitalize;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .Page {
+    height: 100%;
+  }
 }
