--- a/src/containers/Home/pages/Signin/Signin.module.scss
+++ b/src/containers/Home/pages/Signin/Signin.module.scss
@@ -1,15 +1,7 @@
 .Signin {
-  min-height: 100vh;
-  max-height: 100vh;
-  background: linear-gradient(
-    to top right,
-    rgb(100 219 222),
-    var(--primary-soft)
-  );
   display: grid;
   place-items: center;
-  background-color: hsl(200deg 33% 98%);
-
+  padding-top: 10vh;
   .SigninBox {
     display: flex;
     flex-direction: column;
@@ -70,7 +62,7 @@
     display: block;
     height: 2.5rem;
     font-weight: bold;
-
+    border: none;
     width: 100%;
     border-radius: 2.5rem;
     background: linear-gradient(
