--- a/src/containers/Home/pages/Signup/Signup.module.scss
+++ b/src/containers/Home/pages/Signup/Signup.module.scss
@@ -1,14 +1,7 @@
 .Signin {
-  min-height: 100vh;
-  max-height: 100vh;
-  background: linear-gradient(
-    to top right,
-    rgb(100 219 222),
-    var(--primary-soft)
-  );
   display: grid;
   place-items: center;
-  background-color: hsl(200deg 33% 98%);
+  padding-top: 10vh;
 
   .SigninBox {
     width: min(30rem, 95vw);
@@ -71,6 +64,7 @@
   }
   .Button {
     display: block;
+    border: none;
     height: 2.5rem;
     font-weight: bold;
     margin: auto;
