--- a/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
@@ -1,12 +1,16 @@
 .ChatHandler {
   height: 100%;
   overflow-y: auto;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  transition: border-radius 0.1s ease;
+  scroll-behavior: smooth;
+  .MessageContainer {
+    min-height: 100%;
+    padding: 1rem;
 
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    transition: border-radius 0.1s ease;
+  }
   .NoLoad {
     margin: auto;
     font-weight: bold;
