--- a/src/containers/Chat/components/NavBar/NavBar.module.scss
+++ b/src/containers/Chat/components/NavBar/NavBar.module.scss
@@ -1,5 +1,8 @@
+@import "../../../../helpers//scss//variables.module.scss";
+
 .NavBar {
   height: 100%;
+  position: relative;
   max-height: 100vh;
   display: flex;
   z-index: 10;
@@ -7,24 +10,9 @@
   overflow: hidden;
   background-color: hsl(200deg 33% 98%);
   padding: 0;
-  transition: margin-left 0.2s ease-in-out, opacity 0.2s ease;
 
-  //margin-left: -100%;
-  //position: fixed;
   min-width: 20rem;
   width: 20rem;
-  //  opacity: 0;
-  @media screen and (max-width: 700px) {
-    position: fixed;
-    margin-left: 0;
-    width: 100%;
-    min-width: 0;
-
-    &:is([isopen="false"]) {
-      margin-left: -100%;
-      opacity: 0;
-    }
-  }
 
   .CloseArrow {
     display: none;
