--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -47,7 +47,28 @@
         color: var(--primary-blank);
         font-weight: 500;
         text-transform: capitalize;
+        position: relative;
+        user-select: none;
         cursor: pointer;
+        transition: color 0.2 ease;
+
+        &:hover {
+          color: rgb(100 219 222);
+        }
+
+        &.active {
+          color: rgb(100 219 222);
+        }
+
+        .Underline {
+          position: absolute;
+          left: 0;
+          right: 0;
+
+          bottom: -30%;
+          height: 20%;
+          background-color: rgb(100 219 222);
+        }
       }
     }
   }
