--- a/src/containers/Chat/pages/shared/components/InputHandler/InputHandler.module.scss
+++ b/src/containers/Chat/pages/shared/components/InputHandler/InputHandler.module.scss
@@ -1,4 +1,5 @@
 .InputHandler {
+  height: 3.5rem;
   min-height: 3.5rem;
   background-color: var(--primary-light);
   box-shadow: 0 -0.1rem 0.3rem rgb(219, 214, 214);
