--- a/src/containers/Home/pages/Main/Main.module.scss
+++ b/src/containers/Home/pages/Main/Main.module.scss
@@ -1,24 +1,100 @@
 .Main {
   .FirstHandler {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    gap: 10rem;
+
     .Description {
-      background-color: orangered;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+
       min-height: 100%;
-      height: 10rem;
-      width: 50%;
+      height: 80vh;
+      width: 45%;
+
+      .Title {
+        font-size: 2.5rem;
+        letter-spacing: 3px;
+        color: white;
+      }
+
+      .Content {
+        color: var(--primary-blank-lighter);
+        word-spacing: 3px;
+      }
+
+      .ActionHolder {
+        display: flex;
+        justify-content: space-around;
+        gap: 2rem;
+        .PrimaryButton {
+          border: none;
+          padding: 0.7rem 2rem;
+          background-color: transparent;
+          color: white;
+          transition: color 0.2s ease, outline 0.2s ease;
+          border-radius: 0.15rem;
+          cursor: pointer;
+          border-radius: 0.15rem;
+          background: linear-gradient(
+            to top right,
+            var(--primary-hard),
+            var(--primary-soft)
+          );
+
+          &:hover {
+            outline: 1px solid var(--primary-hard);
+          }
+        }
+        .SecondaryButton {
+          border: none;
+          padding: 0.7rem 2rem;
+          background-color: transparent;
+          color: white;
+          transition: color 0.2s ease, outline 0.2s ease;
+          outline: 1px solid var(--primary-soft);
+          border-radius: 0.15rem;
+          cursor: pointer;
+          &:hover {
+            color: var(--primary-soft);
+            outline: 2px solid var(--primary-soft);
+          }
+        }
+      }
     }
     .Visualisation {
-      background-color: purple;
       min-height: 100%;
-      width: 50%;
+      height: 80vh;
+      width: 45%;
+      img {
+        height: 100%;
+        width: 100%;
+      }
     }
     .ViewBox {
       height: 200px;
       width: 200px;
       background-color: blue;
+    }
+
+    @media screen and (max-width: 700px) {
+      flex-direction: column-reverse;
+      padding-bottom: 2rem;
+      .Description {
+        width: 100%;
+        height: 50vh;
+        padding: 2rem;
+      }
+
+      .Visualisation {
+        height: 50vh;
+
+        width: 100%;
+        padding: 2rem;
+      }
     }
   }
 }
