- fixed scroll behavior - added botiim scroller - fixed some animations

--- a/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
@@ -1,6 +1,7 @@
 .ChatHandler {
   height: 100%;
   overflow-y: auto;
+  position: relative;
   .MessageContainer {
     min-height: 100%;
     padding: 1rem;
