--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -47,9 +47,19 @@
   --nabar-close-breakpoint: $navigationhide;
   font-size: 0.9rem;
 }
+/* html,
+body {
+  height: 100%;
+  max-height: 100%;
+} */
 
 .App {
+  height: 100vh;
+  height: 100dvh;
+  height: 100svh;
   max-height: 100vh;
+  max-height: 100dvh;
+  max-height: 100svh;
   font-size: 1rem;
   color: var(--exotic-topography);
 }
