--- a/src/containers/Chat/components/NavBar/NavBar.module.scss
+++ b/src/containers/Chat/components/NavBar/NavBar.module.scss
@@ -16,7 +16,7 @@
 
   .CloseArrow {
     display: none;
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: $navigationHide) {
       display: block;
     }
   }
@@ -48,31 +48,6 @@
 
       &.active {
         color: var(--primary-hard);
-      }
-
-      &[data-title]:hover:after {
-        opacity: 1;
-        transition: all 0.1s ease 0.5s;
-        visibility: visible;
-      }
-      &[data-title]:after {
-        content: attr(data-title);
-        background-color: #cccc;
-        color: rgb(49, 47, 47);
-        position: absolute;
-        padding: 1px 5px 2px 5px;
-        bottom: -50%;
-        left: -10%;
-        font-weight: 700;
-        font-size: 0.9rem;
-        white-space: nowrap;
-        box-shadow: 1px 1px 3px #222222;
-        opacity: 0;
-        z-index: 99999;
-        visibility: none;
-      }
-      &[data-title] {
-        position: relative;
       }
     }
   }
