--- a/src/containers/Chat/pages/Default/Default.module.scss
+++ b/src/containers/Chat/pages/Default/Default.module.scss
@@ -1,3 +1,5 @@
+@import "../../../../helpers//scss//variables.module.scss";
+
 .Default {
   height: 100%;
   display: grid;
@@ -12,7 +14,7 @@
     top: 1rem;
     cursor: pointer;
 
-    @media screen and (min-width: 701px) {
+    @media screen and (min-width: $navigationHide) {
       display: none;
     }
   }
