--- a/src/containers/Home/pages/Main/Main.module.scss
+++ b/src/containers/Home/pages/Main/Main.module.scss
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       gap: 1rem;
-
+      text-align: center;
       min-height: 100%;
       height: 80vh;
       width: 45%;
@@ -22,7 +22,7 @@
       }
 
       .Content {
-        color: #e9eef0;
+        color: #f1f2f3;
         word-spacing: 3px;
       }
 
@@ -67,13 +67,17 @@
       }
     }
     .Visualisation {
-      min-height: 100%;
-      height: 80vh;
-      width: 45%;
-      img {
-        height: 100%;
-        width: 100%;
-      }
+      // min-height: 100%;
+      // height: 80vh;
+      // width: 45%;
+      // img {
+      //   height: 100%;
+      //   width: 100%;
+      // }
+      pointer-events: none;
+      position: absolute;
+      mix-blend-mode: soft-light;
+      opacity: 0.4;
     }
     .ViewBox {
       height: 200px;
@@ -86,16 +90,20 @@
       padding-bottom: 2rem;
       .Description {
         width: 100%;
-        height: 50vh;
+        // height: 50vh;
+        // padding-top: 2rem;
+        justify-content: start;
+
         padding: 2rem;
       }
 
-      .Visualisation {
-        height: 50vh;
+      // .Visualisation {
+      //   display: none;
+      //   height: 50vh;
 
-        width: 100%;
-        padding: 2rem;
-      }
+      //   width: 100%;
+      //   padding: 2rem;
+      // }
     }
   }
 }
