--- a/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
+++ b/src/containers/Chat/pages/shared/components/ChatHandler/ChatHandler.module.scss
@@ -17,4 +17,13 @@
     font-size: 1.3rem;
     text-transform: capitalize;
   }
+
+  .UpperLoader {
+    position: absolute;
+    margin: 0 auto;
+    left: 50%;
+    top: 5px;
+    transform: translateX(-50%);
+    z-index: 22;
+  }
 }
