fixed voice recorder timeout

--- a/src/containers/Chat/pages/shared/components/InputHandler/InputHandler.module.scss
+++ b/src/containers/Chat/pages/shared/components/InputHandler/InputHandler.module.scss
@@ -71,5 +71,11 @@
         translate: 0 2%;
       }
     }
+
+    &:focus-within {
+      svg:not(.sender) {
+        display: none;
+      }
+    }
   }
 }
