--- a/src/containers/Home/pages/Main/Main.module.scss
+++ b/src/containers/Home/pages/Main/Main.module.scss
@@ -97,13 +97,13 @@
         padding: 2rem;
       }
 
-      // .Visualisation {
-      //   display: none;
-      //   height: 50vh;
+      .Visualisation {
+        display: none;
+        height: 50vh;
 
-      //   width: 100%;
-      //   padding: 2rem;
-      // }
+        width: 100%;
+        padding: 2rem;
+      }
     }
   }
 }
