--- a/src/containers/Chat/pages/Profile/Profile.module.scss
+++ b/src/containers/Chat/pages/Profile/Profile.module.scss
@@ -1,3 +1,5 @@
+@import "../../../../helpers//scss//variables.module.scss";
+
 .Profile {
   background-color: var(--primary-light);
   height: 100%;
@@ -120,4 +122,17 @@
 
 .wrapper {
   width: fit-content;
+}
+
+.Menu {
+  position: fixed;
+  color: var(--primary-soft);
+  width: 2rem;
+  left: 1rem;
+  top: 1rem;
+  cursor: pointer;
+
+  @media screen and (min-width: $navigationHide) {
+    display: none;
+  }
 }
