--- a/src/containers/Chat/pages/shared/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
+++ b/src/containers/Chat/pages/shared/components/InputHandler/components/VoiceRecorder/VoiceRecorder.module.scss
@@ -15,7 +15,7 @@
       position: relative;
     }
   }
-  &:is([isrecording="true"]) {
+  &:is([is-recording="true"]) {
     svg {
       color: red;
     }
