added google oauth2 authentication ui

--- a/src/containers/Chat/pages/Profile/Profile.module.scss
+++ b/src/containers/Chat/pages/Profile/Profile.module.scss
@@ -34,6 +34,27 @@
 
     .ProfilPic {
       display: block;
+      position: relative;
+
+      &Hoverer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        // background-color: gray;
+        opacity: 0;
+        border-radius: 100%;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        backdrop-filter: invert(80%);
+        &:hover {
+          opacity: 0.5;
+        }
+      }
     }
   }
 
