added google oauth to signup page and removed redirect upon account creation

--- a/src/containers/Home/pages/Signup/Signup.module.scss
+++ b/src/containers/Home/pages/Signup/Signup.module.scss
@@ -92,4 +92,18 @@
       }
     }
   }
+
+  .Divider {
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 0.2rem;
+    padding: 0.8rem;
+    &Line {
+      width: 100%;
+      height: 2px;
+      background-color: black;
+    }
+  }
 }
